force-app/main/default/objects/ETT_Job_Card_Line_Item__c/ETT_Job_Card_Line_Item__c.object-meta.xml
<CustomObject>
    <label>Job Card Line Item</label>
    <nameField>
        <displayFormat>ACT-{00000}</displayFormat>
        <label>Job Card Line Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Job Card Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>