force-app/main/default/objects/ETT_Job_Card_Line_Item__c/fields/Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>Approval_Status__c</fullName>
    <label>Approval Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Submitted</fullName>
            </value>
            <value>
                <fullName>Pending from Supervisor</fullName>
            </value>
            <value>
                <fullName>Pending from HOO</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Pending from FM</fullName>
            </value>
            <value>
                <fullName>Approve by Supervisor</fullName>
            </value>
            <value>
                <fullName>Approve by HOO</fullName>
            </value>
            <value>
                <fullName>Rejected by HOO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>