force-app/main/default/objects/ETT_Job_Card_Line_Item__c/fields/Building_CG__c.field-meta.xml
<CustomField>
    <fullName>Building_CG__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Building - CG</label>
    <length>255</length>
    <type>Text</type>
</CustomField>