force-app/main/default/objects/ETT_Job_Card_Line_Item__c/fields/Building_SS__c.field-meta.xml
<CustomField>
    <fullName>Building_SS__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Building SS</label>
    <length>255</length>
    <type>Text</type>
</CustomField>