force-app/main/default/objects/ETT_Job_Card_Line_Item__c/fields/Curing_Reasons__c.field-meta.xml
<CustomField>
    <fullName>Curing_Reasons__c</fullName>
    <label>Curing Reasons</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Safety Valve Complaint</fullName>
            </value>
            <value>
                <fullName>Pressure Relay Complaint</fullName>
            </value>
            <value>
                <fullName>Vacuum Relay Complaint</fullName>
            </value>
            <value>
                <fullName>Heating Coil Complaint</fullName>
            </value>
            <value>
                <fullName>Pressure Pipe Leak</fullName>
            </value>
            <value>
                <fullName>Vacuum Pipe Leak</fullName>
            </value>
            <value>
                <fullName>Curing Tube Leak</fullName>
            </value>
            <value>
                <fullName>Envelop Leak</fullName>
            </value>
            <value>
                <fullName>Electrical Motor Complaint</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>