force-app/main/default/objects/ETT_Job_Card_Line_Item__c/fields/Desired_Tread_Pattern__c.field-meta.xml
<CustomField>
    <fullName>Desired_Tread_Pattern__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Desired Tread Pattern</label>
    <length>255</length>
    <type>Text</type>
</CustomField>