force-app/main/default/objects/ETT_Job_Card_Line_Item__c/fields/DPC_Start_Time__c.field-meta.xml
<CustomField>
    <fullName>DPC_Start_Time__c</fullName>
    <label>DPC Start Time</label>
    <type>Time</type>
</CustomField>