force-app/main/default/objects/ETT_Job_Card_Line_Item__c/fields/DPC_time__c.field-meta.xml
<CustomField>
    <fullName>DPC_time__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DPC time</label>
    <type>Checkbox</type>
</CustomField>