force-app/main/default/objects/ETT_Job_Card_Line_Item__c/fields/Envelope_Approved__c.field-meta.xml
<CustomField>
    <fullName>Envelope_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Envelope Approved</label>
    <type>Checkbox</type>
</CustomField>