force-app/main/default/objects/ETT_Job_Card_Line_Item__c/fields/Envelope_Vacuum__c.field-meta.xml
<CustomField>
    <fullName>Envelope_Vacuum__c</fullName>
    <defaultValue>&apos;2.5&apos;</defaultValue>
    <encryptionScheme>None</encryptionScheme>
    <label>Envelope Vacuum</label>
    <length>10</length>
    <type>Text</type>
</CustomField>