force-app/main/default/objects/ETT_Job_Card_Line_Item__c/fields/ETT_Activity_Performed__c.field-meta.xml
<CustomField>
    <fullName>ETT_Activity_Performed__c</fullName>
    <label>Activity Performed</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ETT_Retreading_Steps</valueSetName>
    </valueSet>
</CustomField>