force-app/main/default/objects/ETT_Job_Card_Line_Item__c/fields/ETT_Actual_tyre_Size_Name__c.field-meta.xml
<CustomField>
    <fullName>ETT_Actual_tyre_Size_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Actual Tyre Size Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>