force-app/main/default/objects/ETT_Job_Card_Line_Item__c/fields/ETT_Align_thread_rubber_laser_light__c.field-meta.xml
<CustomField>
    <fullName>ETT_Align_thread_rubber_laser_light__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Align thread rubber with laser light</label>
    <type>Checkbox</type>
</CustomField>