force-app/main/default/objects/ETT_Job_Card_Line_Item__c/fields/ETT_Aluminumn_Oxide__c.field-meta.xml
<CustomField>
    <fullName>ETT_Aluminumn_Oxide__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Aluminumn Oxide</label>
    <type>Checkbox</type>
</CustomField>