force-app/main/default/objects/ETT_Job_Card_Line_Item__c/fields/ETT_Ball_Shaped_Carbide__c.field-meta.xml
<CustomField>
    <fullName>ETT_Ball_Shaped_Carbide__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ball Shaped Carbide</label>
    <type>Checkbox</type>
</CustomField>