force-app/main/default/objects/ETT_Job_Card_Line_Item__c/fields/ETT_Burrs__c.field-meta.xml
<CustomField>
    <fullName>ETT_Burrs__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Burrs</label>
    <type>Checkbox</type>
</CustomField>