force-app/main/default/objects/ETT_Job_Card_Line_Item__c/fields/ETT_Cement_Tools__c.field-meta.xml
<CustomField>
    <fullName>ETT_Cement_Tools__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cement Tools</label>
    <type>Checkbox</type>
</CustomField>