force-app/main/default/objects/ETT_Job_Card_Line_Item__c/fields/ETT_Cementing_Production_Plate_date_area__c.field-meta.xml
<CustomField>
    <fullName>ETT_Cementing_Production_Plate_date_area__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cementing  Production Plate date area</label>
    <type>Checkbox</type>
</CustomField>