force-app/main/default/objects/ETT_Job_Card_Line_Item__c/fields/ETT_Cementing_Tool__c.field-meta.xml
<CustomField>
    <fullName>ETT_Cementing_Tool__c</fullName>
    <label>Cementing Tool</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sprayer</fullName>
            </value>
            <value>
                <fullName>Brush</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>