force-app/main/default/objects/ETT_Job_Card_Line_Item__c/fields/ETT_Crown_condition__c.field-meta.xml
<CustomField>
    <fullName>ETT_Crown_condition__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Crown Condition</label>
    <type>Checkbox</type>
</CustomField>