force-app/main/default/objects/ETT_Job_Card_Line_Item__c/fields/ETT_Curing_Start_Time__c.field-meta.xml
<CustomField>
    <fullName>ETT_Curing_Start_Time__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Curing Start Time</label>
    <type>DateTime</type>
</CustomField>