force-app/main/default/objects/ETT_Job_Card_Line_Item__c/fields/ETT_Defect_s_found__c.field-meta.xml
<CustomField>
    <fullName>ETT_Defect_s_found__c</fullName>
    <label>Defect(s) found</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Rm Not Correct</fullName>
            </value>
            <value>
                <fullName>Rust Not Clear</fullName>
            </value>
            <value>
                <fullName>Steel Not Remove</fullName>
            </value>
            <value>
                <fullName>Patch Missing</fullName>
            </value>
            <value>
                <fullName>Patch Air</fullName>
            </value>
            <value>
                <fullName>Improper Cement solution Coting</fullName>
            </value>
            <value>
                <fullName>Improper One Side Filling</fullName>
            </value>
            <value>
                <fullName>Missing Skiving Spot</fullName>
            </value>
            <value>
                <fullName>Nail Hole Missing</fullName>
            </value>
            <value>
                <fullName>Length, Tread Pattern &amp; Width mismatch</fullName>
            </value>
            <value>
                <fullName>Improper Tread stitching</fullName>
            </value>
            <value>
                <fullName>Envelope &amp; Tube Leaking</fullName>
            </value>
            <value>
                <fullName>Re Buffing</fullName>
            </value>
            <value>
                <fullName>Spot Curing</fullName>
            </value>
            <value>
                <fullName>Inner Liner Separation</fullName>
            </value>
            <value>
                <fullName>Crack Missing</fullName>
            </value>
            <value>
                <fullName>Length , Tread Pattern &amp; Width mis match</fullName>
                <isActive>false</isActive>
                <label>Length , Tread Pattern &amp; Width mis match</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>