force-app/main/default/objects/ETT_Job_Card_Line_Item__c/fields/ETT_Desired_Tread_Pattern__c.field-meta.xml
<CustomField>
    <fullName>ETT_Desired_Tread_Pattern__c</fullName>
    <description>To be deleted</description>
    <label>Desired Tread Pattern</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>