force-app/main/default/objects/ETT_Job_Card_Line_Item__c/fields/ETT_Desired_Width__c.field-meta.xml
<CustomField>
    <fullName>ETT_Desired_Width__c</fullName>
    <label>Desired Width</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>