force-app/main/default/objects/ETT_Job_Card_Line_Item__c/fields/ETT_DPC_Start_Time__c.field-meta.xml
<CustomField>
    <fullName>ETT_DPC_Start_Time__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>DPC Start Time</label>
    <length>255</length>
    <type>Text</type>
</CustomField>