force-app/main/default/objects/ETT_Job_Card_Line_Item__c/fields/ETT_Dust_Collector_Reason__c.field-meta.xml
<CustomField>
    <fullName>ETT_Dust_Collector_Reason__c</fullName>
    <label>Dust Collector Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Maintenance Required</fullName>
            </value>
            <value>
                <fullName>Repair/Fault identified</fullName>
            </value>
            <value>
                <fullName>Other reasons</fullName>
            </value>
            <value>
                <fullName>Check Suction Line</fullName>
            </value>
            <value>
                <fullName>Repair Suction Pipeline</fullName>
            </value>
            <value>
                <fullName>Change Suction Filter</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>