force-app/main/default/objects/ETT_Job_Card_Line_Item__c/fields/ETT_End_parent_line_item__c.field-meta.xml
<CustomField>
    <fullName>ETT_End_parent_line_item__c</fullName>
    <defaultValue>false</defaultValue>
    <label>End parent line item</label>
    <type>Checkbox</type>
</CustomField>