force-app/main/default/objects/ETT_Job_Card_Line_Item__c/fields/ETT_Enter_Detail__c.field-meta.xml
<CustomField>
    <fullName>ETT_Enter_Detail__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Enter Detail</label>
    <length>255</length>
    <type>Text</type>
</CustomField>