force-app/main/default/objects/ETT_Job_Card_Line_Item__c/fields/ETT_Envelop_Serial_Number__c.field-meta.xml
<CustomField>
    <fullName>ETT_Envelop_Serial_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Envelop Serial Number</label>
    <length>200</length>
    <type>Text</type>
</CustomField>