force-app/main/default/objects/ETT_Job_Card_Line_Item__c/fields/ETT_Filling_check_on_GSO_Stricker_Area__c.field-meta.xml
<CustomField>
    <fullName>ETT_Filling_check_on_GSO_Stricker_Area__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Filling check on GSO Stricker Area</label>
    <type>Checkbox</type>
</CustomField>