force-app/main/default/objects/ETT_Job_Card_Line_Item__c/fields/ETT_Filling_check_on_Skived_areas__c.field-meta.xml
<CustomField>
    <fullName>ETT_Filling_check_on_Skived_areas__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Filling check on Skived areas</label>
    <type>Checkbox</type>
</CustomField>