force-app/main/default/objects/ETT_Job_Card_Line_Item__c/fields/ETT_Filling_Check_Production_plate_area__c.field-meta.xml
<CustomField>
    <fullName>ETT_Filling_Check_Production_plate_area__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Filling Check on Production plate area</label>
    <type>Checkbox</type>
</CustomField>