force-app/main/default/objects/ETT_Job_Card_Line_Item__c/fields/ETT_Has_dependency__c.field-meta.xml
<CustomField>
    <fullName>ETT_Has_dependency__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has dependency?</label>
    <type>Checkbox</type>
</CustomField>