force-app/main/default/objects/ETT_Job_Card_Line_Item__c/fields/ETT_Incorrect_Buffing_Settings_Reason__c.field-meta.xml
<CustomField>
    <fullName>ETT_Incorrect_Buffing_Settings_Reason__c</fullName>
    <label>Incorrect Buffing Settings Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Adjustment needed</fullName>
            </value>
            <value>
                <fullName>Other issues</fullName>
            </value>
            <value>
                <fullName>Rim Change</fullName>
            </value>
            <value>
                <fullName>Radius setting</fullName>
            </value>
            <value>
                <fullName>Bead adjustment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>