force-app/main/default/objects/ETT_Job_Card_Line_Item__c/fields/ETT_Initial_Activity_State__c.field-meta.xml
<CustomField>
    <fullName>ETT_Initial_Activity_State__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Initial Activity State</label>
    <length>255</length>
    <type>Text</type>
</CustomField>