force-app/main/default/objects/ETT_Job_Card_Line_Item__c/fields/ETT_Is_2_piece_thread__c.field-meta.xml
<CustomField>
    <fullName>ETT_Is_2_piece_thread__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is 2 piece thread?</label>
    <type>Checkbox</type>
</CustomField>