force-app/main/default/objects/ETT_Job_Card_Line_Item__c/fields/ETT_Is_Cementing_Completed__c.field-meta.xml
<CustomField>
    <fullName>ETT_Is_Cementing_Completed__c</fullName>
    <label>Is Cementing Completed</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>