force-app/main/default/objects/ETT_Job_Card_Line_Item__c/fields/ETT_Job_Card__c.field-meta.xml
<CustomField>
    <fullName>ETT_Job_Card__c</fullName>
    <label>Job Card</label>
    <referenceTo>ETT_Job_Card__c</referenceTo>
    <relationshipLabel>Job Card Line Items</relationshipLabel>
    <relationshipName>Job_Card_Line_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>