force-app/main/default/objects/ETT_Job_Card_Line_Item__c/fields/ETT_Linked_Job_Card_Line_Item__c.field-meta.xml
<CustomField>
    <fullName>ETT_Linked_Job_Card_Line_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Linked Job Card Line Item</label>
    <referenceTo>ETT_Job_Card_Line_Item__c</referenceTo>
    <relationshipLabel>Job Card Line Items</relationshipLabel>
    <relationshipName>Job_Card_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>