force-app/main/default/objects/ETT_Job_Card_Line_Item__c/fields/ETT_Maintenance_Check__c.field-meta.xml
<CustomField>
    <fullName>ETT_Maintenance_Check__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Maintenance Check</label>
    <type>Checkbox</type>
</CustomField>