force-app/main/default/objects/ETT_Job_Card_Line_Item__c/fields/ETT_Notification_Sent_to_Supervisor__c.field-meta.xml
<CustomField>
    <fullName>ETT_Notification_Sent_to_Supervisor__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Notification Sent to Supervisor</label>
    <type>Checkbox</type>
</CustomField>