force-app/main/default/objects/ETT_Job_Card_Line_Item__c/fields/ETT_Notification_to_FM_HOO_S__c.field-meta.xml
<CustomField>
    <fullName>ETT_Notification_to_FM_HOO_S__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ETT_Notification to FM HOO S</label>
    <type>Checkbox</type>
</CustomField>