force-app/main/default/objects/ETT_Job_Card_Line_Item__c/fields/ETT_Notify_HOO__c.field-meta.xml
<CustomField>
    <fullName>ETT_Notify_HOO__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Notify HOO</label>
    <type>Checkbox</type>
</CustomField>