force-app/main/default/objects/ETT_Job_Card_Line_Item__c/fields/ETT_Old_Tyre_Pattern__c.field-meta.xml
<CustomField>
    <fullName>ETT_Old_Tyre_Pattern__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>ETT Old Tyre Pattern</label>
    <length>255</length>
    <type>Text</type>
</CustomField>