force-app/main/default/objects/ETT_Job_Card_Line_Item__c/fields/ETT_Overall_End_time__c.field-meta.xml
<CustomField>
    <fullName>ETT_Overall_End_time__c</fullName>
    <label>Overall End time</label>
    <summarizedField>ETT_Work_Activity__c.ETT_End_time__c</summarizedField>
    <summaryForeignKey>ETT_Work_Activity__c.ETT_Job_Card_Line_Item__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>