force-app/main/default/objects/ETT_Job_Card_Line_Item__c/fields/ETT_Overall_Start_time__c.field-meta.xml
<CustomField>
    <fullName>ETT_Overall_Start_time__c</fullName>
    <label>Overall Start time</label>
    <summarizedField>ETT_Work_Activity__c.ETT_Start_time__c</summarizedField>
    <summaryForeignKey>ETT_Work_Activity__c.ETT_Job_Card_Line_Item__c</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>