force-app/main/default/objects/ETT_Job_Card_Line_Item__c/fields/ETT_Overall_Time_taken_in_mins__c.field-meta.xml
<CustomField>
    <fullName>ETT_Overall_Time_taken_in_mins__c</fullName>
    <label>Overall Time taken (in mins)</label>
    <summarizedField>ETT_Work_Activity__c.ETT_Time_taken_in_mins__c</summarizedField>
    <summaryForeignKey>ETT_Work_Activity__c.ETT_Job_Card_Line_Item__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>