force-app/main/default/objects/ETT_Job_Card_Line_Item__c/fields/ETT_Pause_Reason__c.field-meta.xml
<CustomField>
    <fullName>ETT_Pause_Reason__c</fullName>
    <label>Pause Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ETT_Job_Card_Hold_Reasons</valueSetName>
    </valueSet>
</CustomField>