force-app/main/default/objects/ETT_Job_Card_Line_Item__c/fields/ETT_Physical_Width__c.field-meta.xml
<CustomField>
    <fullName>ETT_Physical_Width__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Physical Width</label>
    <length>255</length>
    <type>Text</type>
</CustomField>