force-app/main/default/objects/ETT_Job_Card_Line_Item__c/fields/ETT_Raps__c.field-meta.xml
<CustomField>
    <fullName>ETT_Raps__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Raps</label>
    <type>Checkbox</type>
</CustomField>