force-app/main/default/objects/ETT_Job_Card_Line_Item__c/fields/ETT_Remarks__c.field-meta.xml
<CustomField>
    <fullName>ETT_Remarks__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Remarks</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>