force-app/main/default/objects/ETT_Job_Card_Line_Item__c/fields/ETT_Remove_Poly_vent_Plastics__c.field-meta.xml
<CustomField>
    <fullName>ETT_Remove_Poly_vent_Plastics__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Remove Poly Vent Plastics</label>
    <type>Checkbox</type>
</CustomField>