force-app/main/default/objects/ETT_Job_Card_Line_Item__c/fields/ETT_Remove_Staple__c.field-meta.xml
<CustomField>
    <fullName>ETT_Remove_Staple__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Remove Staple</label>
    <type>Checkbox</type>
</CustomField>