force-app/main/default/objects/ETT_Job_Card_Line_Item__c/fields/ETT_Revision_Number__c.field-meta.xml
<CustomField>
    <fullName>ETT_Revision_Number__c</fullName>
    <label>Revision Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>