force-app/main/default/objects/ETT_Job_Card_Line_Item__c/fields/ETT_Rubber_Hogs__c.field-meta.xml
<CustomField>
    <fullName>ETT_Rubber_Hogs__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Rubber Hogs</label>
    <type>Checkbox</type>
</CustomField>