force-app/main/default/objects/ETT_Job_Card_Line_Item__c/fields/ETT_Side_Buffer_Condition_Reasons__c.field-meta.xml
<CustomField>
    <fullName>ETT_Side_Buffer_Condition_Reasons__c</fullName>
    <label>Side Buffer Condition Reasons</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Blade Change</fullName>
            </value>
            <value>
                <fullName>Wire Brush Change</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>