force-app/main/default/objects/ETT_Job_Card_Line_Item__c/fields/ETT_Skived_all_other_areas__c.field-meta.xml
<CustomField>
    <fullName>ETT_Skived_all_other_areas__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Skived all other areas</label>
    <type>Checkbox</type>
</CustomField>