force-app/main/default/objects/ETT_Job_Card_Line_Item__c/fields/ETT_Skived_Cuts_Nail_holes_etc__c.field-meta.xml
<CustomField>
    <fullName>ETT_Skived_Cuts_Nail_holes_etc__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Skived Cuts, Nail holes etc</label>
    <type>Checkbox</type>
</CustomField>