force-app/main/default/objects/ETT_Job_Card_Line_Item__c/fields/ETT_Skived_GSO_sticker_area__c.field-meta.xml
<CustomField>
    <fullName>ETT_Skived_GSO_sticker_area__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Skived GSO sticker area</label>
    <type>Checkbox</type>
</CustomField>