force-app/main/default/objects/ETT_Job_Card_Line_Item__c/fields/ETT_Skived_Production_Plate_date_area__c.field-meta.xml
<CustomField>
    <fullName>ETT_Skived_Production_Plate_date_area__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Skived Production Plate date area</label>
    <type>Checkbox</type>
</CustomField>