force-app/main/default/objects/ETT_Job_Card_Line_Item__c/fields/ETT_ThreadPrep_Reason__c.field-meta.xml
<CustomField>
    <fullName>ETT_ThreadPrep_Reason__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Enter Reason</label>
    <type>TextArea</type>
</CustomField>