force-app/main/default/objects/ETT_Job_Card_Line_Item__c/fields/ETT_Tool_Material_Request_Raised__c.field-meta.xml
<CustomField>
    <fullName>ETT_Tool_Material_Request_Raised__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Tool/Material Request Raised?</label>
    <type>Checkbox</type>
</CustomField>