force-app/main/default/objects/ETT_Job_Card_Line_Item__c/fields/ETT_Type__c.field-meta.xml
<CustomField>
    <fullName>ETT_Type__c</fullName>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pre-Requisite Work</fullName>
            </value>
            <value>
                <fullName>Actual Work</fullName>
            </value>
            <value>
                <fullName>Pause</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>