force-app/main/default/objects/ETT_Job_Card_Line_Item__c/fields/ETT_Tyre_Desired_OD__c.field-meta.xml
<CustomField>
    <fullName>ETT_Tyre_Desired_OD__c</fullName>
    <label>Tyre Desired OD</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>