force-app/main/default/objects/ETT_Job_Card_Line_Item__c/fields/ETT_Verified_Building_Rim_Change__c.field-meta.xml
<CustomField>
    <fullName>ETT_Verified_Building_Rim_Change__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Verified Building Rim Change</label>
    <type>Checkbox</type>
</CustomField>