force-app/main/default/objects/ETT_Job_Card_Line_Item__c/fields/ETT_Verified_Flash__c.field-meta.xml
<CustomField>
    <fullName>ETT_Verified_Flash__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Verified Flash</label>
    <type>Checkbox</type>
</CustomField>