force-app/main/default/objects/ETT_Job_Card_Line_Item__c/fields/ETT_Verified_Removal_of_plastic_cover__c.field-meta.xml
<CustomField>
    <fullName>ETT_Verified_Removal_of_plastic_cover__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Verified Removal of plastic cover</label>
    <type>Checkbox</type>
</CustomField>