force-app/main/default/objects/ETT_Job_Card_Line_Item__c/fields/ETT_Verified_Rubber_Hardness_Check__c.field-meta.xml
<CustomField>
    <fullName>ETT_Verified_Rubber_Hardness_Check__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Verified Rubber Hardness Check</label>
    <type>Checkbox</type>
</CustomField>