force-app/main/default/objects/ETT_Job_Card_Line_Item__c/fields/ETT_Verified_thread_condition__c.field-meta.xml
<CustomField>
    <fullName>ETT_Verified_thread_condition__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Verified thread condition</label>
    <type>Checkbox</type>
</CustomField>