force-app/main/default/objects/ETT_Job_Card_Line_Item__c/fields/ETT_Verified_Thread_Pattern_Val_Physical__c.field-meta.xml
<CustomField>
    <fullName>ETT_Verified_Thread_Pattern_Val_Physical__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Verified Thread Pattern Value &amp; Physical</label>
    <type>Checkbox</type>
</CustomField>