force-app/main/default/objects/ETT_Job_Card_Line_Item__c/fields/ETT_Verify_Cuttings__c.field-meta.xml
<CustomField>
    <fullName>ETT_Verify_Cuttings__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Verify Cuttings</label>
    <type>Checkbox</type>
</CustomField>