force-app/main/default/objects/ETT_Job_Card_Line_Item__c/fields/ETT_Wire_Cutter_Stone__c.field-meta.xml
<CustomField>
    <fullName>ETT_Wire_Cutter_Stone__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Wire Cutter Stone</label>
    <type>Checkbox</type>
</CustomField>