force-app/main/default/objects/ETT_Job_Card_Line_Item__c/fields/Factory_Stock_Units__c.field-meta.xml
<CustomField>
    <fullName>Factory_Stock_Units__c</fullName>
    <label>Factory Stock Units</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>