force-app/main/default/objects/ETT_Job_Card_Line_Item__c/fields/Main_Stock_Units__c.field-meta.xml
<CustomField>
    <fullName>Main_Stock_Units__c</fullName>
    <label>Main Stock Units</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>